src/test/resources/purescript_examples/failing/ImportExplicit2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownImportDataConstructor\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSProperNameImpl(ProperName)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('X')
          PsiElement(()('(')
          PSIdentifierImpl(TypeConstructor)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Z')
          PsiElement(,)(',')
          PsiElement(whitespace)(' ')
          PSIdentifierImpl(TypeConstructor)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Q')
          PsiElement())(')')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
